--- a/envoy/envoy-config-dev.yml
+++ b/envoy/envoy-config-dev.yml
@@ -96,7 +96,7 @@ static_resources:
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                       proto_descriptor: "/data/service_definition.pb"
-                      services: ["donech.erp.v1.AdminAPI","donech.erp.v1.SystemAPI","donech.erp.v1.GateAPI"]
+                      services: ["donech.gate.v1.GateAPI"]
                       print_options:
                         add_whitespace: true
                         always_print_primitive_fields: true
